Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,18 @@
 
 <p>Below are links to all available Glyph scripts. If you are a GitHub user, subscribe to your favorite scripts to receive updates on development progress or new version information. Fork scripts and modify the code to create new projects. Who knows, we may merge your changes back into our master branch. Enjoy!</p>
 
-<h3>Authors and Contributors</h3>
+<table>
+<tr>
+<th align="center">Script Name</th>
+<th align="center">Description</th>
+<th align="center">Line Count</th>
+</tr>
+<tr>
+<td align="center"><a href="http://pointwise.github.com/AirfoilMesh/">AirfoilMesh</a></td>
+<td align="center">Generate airfoil geometries and boundary layer meshes</td>
+<td align="center">377</td>
+</tr>
+</table><h3>Authors and Contributors</h3>
 
 <p>We welcome new script authors and contributors! Either submit a new script or fork an existing script on GitHub. Please be sure to include sample files so we can experiment with the script before posting your script or merging any changes. </p>
 
