--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
 <th align="center">Line Count</th>
 </tr>
 <tr>
-<td align="center"><a href="http://pointwise.github.com/AirfoilMesh/">AirfoilMesh</a></td>
-<td align="center">Generate airfoil geometries and boundary layer meshes</td>
-<td align="center">377</td>
-</tr>
-<tr>
 <td align="center"><a href="http://pointwise.github.com/AirfoilGenerator/">AirfoilGenerator</a></td>
 <td align="center">Generate NACA 4-series airfoil geometries</td>
 <td align="center">156</td>
 </tr>
+<tr>
+<td align="center"><a href="http://pointwise.github.com/AirfoilMesh/">AirfoilMesh</a></td>
+<td align="center">Generate airfoil geometries and boundary layer meshes</td>
+<td align="center">377</td>
+</tr>
 </table><h3>Authors and Contributors</h3>
 
-<p>We welcome new script authors and contributors! Either submit a new script or fork an existing script on GitHub. Please be sure to include sample files so we can experiment with the script before posting your script or merging any changes. </p>
+<p>We welcome new script authors and contributors! Either submit a new script or fork an existing project on GitHub. Please be sure to include sample files so we can experiment with the script before posting or merging your code. </p>
 
 <p>Don't have a GitHub account, that's alright. Just email us your script. Please include the following information in your email:</p>
 
