Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -44,17 +44,18 @@
 <tr>
 <th align="center">Script Name</th>
 <th align="center">Description</th>
-<th align="center">Line Count</th>
 </tr>
 <tr>
 <td align="center"><a href="http://pointwise.github.com/AirfoilGenerator/">AirfoilGenerator</a></td>
 <td align="center">Generate NACA 4-series airfoil geometries</td>
-<td align="center">156</td>
 </tr>
 <tr>
 <td align="center"><a href="http://pointwise.github.com/AirfoilMesh/">AirfoilMesh</a></td>
 <td align="center">Generate airfoil geometries and boundary layer meshes</td>
-<td align="center">377</td>
+</tr>
+<tr>
+<td align="center"><a href="http://pointwise.github.com/ArrayCopyRotate/">ArrayCopyRotate</a></td>
+<td align="center">Copy, rotate, and paste entities a prescribed number of times</td>
 </tr>
 </table><h3>Authors and Contributors</h3>
 
