Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Pointwise Glyph Script Exchange : Macros and Templates for CFD Meshing" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Pointwise Glyph Script Exchange by pointwise</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Pointwise Glyph Script Exchange</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Pointwise Glyph Script Exchange</h1>
+        <p>Macros and Templates for CFD Meshing</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/pointwise">View on GitHub</a>
 
-          <h1 id="project_title">Pointwise Glyph Script Exchange</h1>
-          <h2 id="project_tagline">Macros and Templates for CFD Meshing</h2>
+        <p class="view"><a href="https://github.com/pointwise">View My GitHub Profile</a></p>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h3>Welcome to the Pointwise Script Exchange</h3>
 
 <p>Glyph, the Tcl-based scripting language in Pointwise and Gridgen, offers the ability to automate all or part of the CFD meshing process.</p>
@@ -75,16 +71,11 @@
 
 <p>Want to learn more about scripting? Be sure to visit our <a href="http://www.pointwise.com/">website</a> and keep an eye out for upcoming <a href="http://www.pointwise.com/webinar/">webinars</a>, <a href="http://www.pointwise.com/videos/">videos</a>, and <a href="http://www.pointwise.com/support/train.shtml">training</a>.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
