--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
+        <img src="http://pointwise.github.com/logo-globe-pw-193.png" alt="Pointwise Globe" />
         <h1>Pointwise Glyph Script Exchange</h1>
         <p>Macros and Templates for CFD Meshing</p>
 
