Cleanup home page text

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
       </header>
       <section>
-        <h3>Welcome to the Pointwise Script Exchange</h3>
+        <h2>Welcome to the Pointwise Glyph Script Exchange</h2>
 
-<p>Glyph, the Tcl-based scripting language in Pointwise and Gridgen, offers the ability to automate all or part of the CFD meshing process.</p>
+<p>Glyph, the Tcl-based scripting language in the Pointwise mesh generation software for computational fluid dynamics (CFD), offers the ability to automate all or part of the CFD meshing process.</p>
 
 <ul>
 <li>Create macros that automate tedious tasks.</li>
@@ -35,38 +35,26 @@
 <li>Just have fun making the software do something it wasn't designed to do.</li>
 </ul><h3>Available Glyph Scripts</h3>
 
-<p>Below are links to all available Glyph scripts. If you are a GitHub user, subscribe to your favorite scripts to receive updates on development progress or new version information. Fork scripts and modify the code to create new projects. Who knows, we may merge your changes back into our master branch. Enjoy!</p>
+<p>You can find all of the available Glyph scripts on our profile page, 
+<a href="http://www.github.com/pointwise">github.com/pointwise</a>. 
+If you are a GitHub user, subscribe to your favorite scripts to receive updates on development progress or new version information. Fork scripts and modify the code to create new projects. Who knows, we may merge your changes back into our master branch. Enjoy!</p>
 
-<table>
-<tr>
-<th align="center">Script Name</th>
-<th align="center">Description</th>
-</tr>
-<tr>
-<td align="center"><a href="http://pointwise.github.com/AirfoilGenerator/">AirfoilGenerator</a></td>
-<td align="center">Generate NACA 4-series airfoil geometries</td>
-</tr>
-<tr>
-<td align="center"><a href="http://pointwise.github.com/AirfoilMesh/">AirfoilMesh</a></td>
-<td align="center">Generate airfoil geometries and boundary layer meshes</td>
-</tr>
-<tr>
-<td align="center"><a href="http://pointwise.github.com/ArrayCopyRotate/">ArrayCopyRotate</a></td>
-<td align="center">Copy, rotate, and paste entities a prescribed number of times</td>
-</tr>
+<ul>
+<li><a href="http://www.github.com/pointwise">Pointwise's GitHub Profile Page</a> </li>
+</ul>
+
 </table><h3>Authors and Contributors</h3>
 
 <p>We welcome new script authors and contributors! Either submit a new script or fork an existing project on GitHub. Please be sure to include sample files so we can experiment with the script before posting or merging your code. </p>
 
-<p>Don't have a GitHub account, that's alright. Just email us your script. Please include the following information in your email:</p>
+<p>If you don't have a GitHub account, that's alright. Just email your script to <a href="mailto:glyph@pointwise.com">glyph@pointwise.com</a> and include:</p>
 
 <ul>
-<li>Your name</li>
-<li>The name of your organization</li>
+<li>Your name and where you work</li>
 <li>Your email address</li>
 <li>A description of the script's purpose</li>
-<li>The script itself and any related files included as attachments</li>
-</ul><p>Thanks again. We hope to review and post your script shortly.</p>
+<li>The script itself and any related files</li>
+</ul>
 
 <h3>Support or Contact</h3>
 
