--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Pointwise Glyph Script Exchange by pointwise</title>
+    <title>Fidelity Pointwise Glyph Script Exchange by Cadence Design Systems, Inc.</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="http://pointwise.github.com/PointwiseGlobe.png" alt="Pointwise Globe" />
-        <h1>Pointwise Glyph Script Exchange</h1>
+        <img src="https://github.com/pointwise/pointwise.github.com/blob/master/PointwiseGlobe.png" alt="Fidelity Pointwise" />
+        <h1>Fidelity Pointwise Glyph Script Exchange</h1>
         <p>Macros and Templates for CFD Meshing</p>
 
 
@@ -24,9 +24,9 @@
 
       </header>
       <section>
-        <h2>Welcome to the Pointwise Glyph Script Exchange</h2>
+        <h2>Welcome to the Fidelity Pointwise Glyph Script Exchange</h2>
 
-<p>Glyph, the Tcl-based scripting language in the Pointwise mesh generation software for computational fluid dynamics (CFD), offers the ability to automate all or part of the CFD meshing process.</p>
+<p>Glyph, the Tcl-based scripting language in the Fidelity Pointwise mesh generation software for computational fluid dynamics (CFD), offers the ability to automate all or part of the CFD meshing process.</p>
 
 <ul>
 <li>Create macros that automate tedious tasks.</li>
@@ -40,14 +40,14 @@
 If you are a GitHub user, subscribe to your favorite scripts to receive updates on development progress or new version information. Fork scripts and modify the code to create new projects. Who knows, we may merge your changes back into our master branch. Enjoy!</p>
 
 <ul>
-<li><a href="http://www.github.com/pointwise">Pointwise's GitHub Profile Page</a> </li>
+<li><a href="http://www.github.com/pointwise">Fidelity Pointwise's GitHub Profile Page</a> </li>
 </ul>
 
 </table><h3>Authors and Contributors</h3>
 
 <p>We welcome new script authors and contributors! Either submit a new script or fork an existing project on GitHub. Please be sure to include sample files so we can experiment with the script before posting or merging your code. </p>
 
-<p>If you don't have a GitHub account, that's alright. Just email your script to <a href="mailto:glyph@pointwise.com">glyph@pointwise.com</a> and include:</p>
+<p>If you don't have a GitHub account, that's alright. Just email your script to <a href="mailto:pw-glyph@cadence.com">pw-glyph@cadence.com</a> and include:</p>
 
 <ul>
 <li>Your name and where you work</li>
@@ -60,7 +60,7 @@ If you are a GitHub user, subscribe to your favorite scripts to receive updates 
 
 <p>Want to learn more about scripting? Be sure to visit our <a href="http://www.pointwise.com/">website</a> and keep an eye out for upcoming <a href="http://www.pointwise.com/webinar/">webinars</a>, <a href="http://www.pointwise.com/videos/">videos</a>, and <a href="http://www.pointwise.com/support/train.shtml">training</a>.</p>
 
-<p>You can also visit the <a href="http://www.pointwise.com/glyph2/">Glyph manual pages</a> for a comprehensive list of all the Pointwise functions available through Glyph. </p>
+<p>You can also visit the <a href="http://www.pointwise.com/glyph2/">Glyph manual pages</a> for a comprehensive list of all the Fidelity Pointwise functions available through Glyph. </p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
