Fix logo image link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="https://github.com/pointwise/pointwise.github.com/blob/master/fidelity_512x512.png" alt="Fidelity Pointwise" />
+        <img src="https://raw.github.com/pointwise/pointwise.github.com/master/fidelity_512x512.png" alt="Fidelity Pointwise" />
         <h1>Fidelity Pointwise Glyph Script Exchange</h1>
         <p>Macros and Templates for CFD Meshing</p>
 
